force-app/main/default/objects/Sentry_Queue_Telemetry__c/Sentry_Queue_Telemetry__c.object-meta.xml
<CustomObject>
    <description>Operational telemetry for SentryForce queue depth, latency, and failed jobs.</description>
    <label>Sentry Queue Telemetry</label>
    <nameField>
        <displayFormat>SQT-{000000}</displayFormat>
        <label>Sentry Queue Telemetry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sentry Queue Telemetry</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>