force-app/main/default/objects/Sentry_Queue_Telemetry__c/fields/Envelope_Count__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Count__c</fullName>
    <label>Envelope Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>