force-app/main/default/objects/Sentry_Queue_Telemetry__c/fields/Failed_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Failed_Jobs__c</fullName>
    <label>Failed Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>