force-app/main/default/objects/Sentry_Queue_Telemetry__c/fields/Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>Metric_Type__c</fullName>
    <label>Metric Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Enqueue</fullName><default>true</default><label>Enqueue</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>