force-app/main/default/objects/Sentry_Queue_Telemetry__c/fields/Processing_Latency_Ms__c.field-meta.xml
<CustomField>
    <fullName>Processing_Latency_Ms__c</fullName>
    <label>Processing Latency (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>