force-app/main/default/objects/Sentry_Queue_Telemetry__c/fields/Queue_Depth__c.field-meta.xml
<CustomField>
    <fullName>Queue_Depth__c</fullName>
    <label>Queue Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>