force-app/main/default/objects/Sentry_Queue_Telemetry__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <label>Queue Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>